@@ -59,3 +59,5 @@
 #define SCOREP_BACKEND_HAVE_PTHREAD_SUPPORT      @SCOREP_HAVE_PTHREAD_SUPPORT@
 #define SCOREP_BACKEND_PTHREAD_CFLAGS            "@PTHREAD_CFLAGS@"
 #define SCOREP_BACKEND_PTHREAD_LIBS              "@PTHREAD_LIBS@"
+
+#define SCOREP_BACKEND_HAVE_IQUOTE_SUPPORT @HAVE_SCOREP_IQUOTE_SUPPORT@
